Fix form overflow issue on mobile

--- a/src/app/signup/page.module.scss
+++ b/src/app/signup/page.module.scss
@@ -16,9 +16,14 @@
             vertical-align: middle;
             grid-column: 1;
             text-align: right;
+            word-break: keep-all;
         }
         .input {
             grid-column: 2;
+            input {
+                max-width: 12em;
+                width: 100%;
+            }
         }
         button {
             width: fit-content;
